3.0.1
Add Daily and Weekly options to Get-BcArtifactUrl
Performance optimization of Get-BcArtifactUrl

3.0.0
Enable Telemetry. BcContainerHelper will emit usage statistics telemetry to Microsoft for all commands used.
$bcContainerHelperConfig.SendExtendedTelemetryToMicrosoft = $true will emit extended telemetry to Microsoft
Flush-ContainerHelperCache does not run docker image prune unless keepdays is 0 (= flush all)

2.0.23
Issue #2210 Removing Desktop shortcuts in a folder fails if the desktop is setup for onedrive sync
Run-TestsInBcContainer was hardcoded to use Romance Standard Time as timezone for the user - use the session timezone instead
Issue #2215 Add parameter -doNotIgnoreInfos to Run-AlCops (and ignore infos by default)
Modify Run-AlValidation to validate in the same way as the AppSource Validation Service

2.0.22
Issue #2206 new-bccontainer with importtesttoolkit sometimes fails containername is not bcserver

2.0.21
Increasing version number to avoid locking issues wil applicationInsights DLL

2.0.20
Add support for using Docker Volumes for HostHelperFolder, BcArtifacts Cache folder and my folder
Fix to Create-AadAppsForBC for this breaking change in AzureAD https://docs.microsoft.com/en-us/azure/active-directory/develop/reference-breaking-changes#appid-uri-in-single-tenant-applications-will-require-use-of-default-scheme-or-verified-domains
Issue #2187 New-BcContainer error when including "-includePerformanceToolkit" parameter (and -imageName)

2.0.19
New-BcAuthContext displays wrongly decoded names as accessToken is UTF8 encoded
Issue #2181 Fix encoding when using Get-Content
Issue #2035 SharedEncryptionKey feature doesn't always work across versions
Issue #2135 Unable to read data from the transport connection
Allow user to specify isolation on Windows 11 / Windows 2022

2.0.18
Fix issue with Invoke-BcContainerCodeunit
Fix issue where Invoke-BcContainerCodeUnit fails on 19.0 containers
Issue #2167 support different folders for external SQL Server